--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "start-server-and-test start http://localhost:3030 cy:run",
     "eject": "react-scripts eject",
-    "cypress": "./node_modules/.bin/cypress open"
+    "cypress": "cypress open",
+    "start": "my-server -p 3030",
+    "cy:run": "cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^9.5.3"
+    "cypress": "^9.6.0",
+    "start-server-and-test": "^1.14.0"
   }
 }
